Dropped all comments from the project

--- a/1.html
+++ b/1.html
@@ -47,10 +47,10 @@
                 <th>№</th>
                 <th>Назва об'єкту</th>
                 <th>Назва забруднюючої речовини</th>
-                <th id="emission-volume">Об'єм викидів</th> <!-- Додано ID -->
+                <th id="emission-volume">Об'єм викидів</th>
                 <th>Ставки податку за викиди</th>
                 <th>Рік</th>
-                <th>Податок</th> <!-- Додано новий стовпець -->
+                <th>Податок</th>
                 <th>Дії</th>
             </tr>
         </thead>
