--- a/1.html
+++ b/1.html
@@ -20,7 +20,29 @@
         </select>
     
         <label for="pollutant-name">Назва забруднюючої речовини:</label>
-        <input type="text" id="pollutant-name" placeholder="Назва забруднюючої речовини" required>
+        <select id="pollutant-name" required>
+            <option value="">Оберіть забруднюючу речовину</option>
+            <option value="формальдегід">Формальдегід</option>
+            <option value="кадмій">Кадмій</option>
+            <option value="залізо">Залізо</option>
+            <option value="марганець">Марганець</option>
+            <option value="мідь">Мідь</option>
+            <option value="нікель">Нікель</option>
+            <option value="свинцева">Свинець</option>
+            <option value="хром">Хром</option>
+            <option value="цинк">Цинк</option>
+            <option value="зважені речовини">Зважені речовини (пил)</option>
+            <option value="діоксид сірки">Діоксид сірки</option>
+            <option value="оксид вуглецю">Оксид вуглецю</option>
+            <option value="діоксид азоту">Діоксид азоту</option>
+            <option value="оксид азоту">Оксид азоту</option>
+            <option value="сірководень">Сірководень</option>
+            <option value="фенол">Фенол</option>
+            <option value="фтористий водень">Фтористий водень</option>
+            <option value="хлористий водень">Хлористий водень</option>
+            <option value="аміак">Аміак</option>
+            <option value="завислі речовини">Завислі речовини</option>
+        </select>
     
         <label for="emission-volume">Об'єм викидів:</label>
         <input type="number" id="emission-volume" placeholder="Об'єм викидів" min="0" step="0.01" required>
