--- a/1.html
+++ b/1.html
@@ -14,9 +14,9 @@
         <label for="object-name">Назва об'єкту:</label>
         <select id="object-name" required>
             <option value="">Оберіть об'єкт</option>
-            <option value="1">Об'єкт 1</option>
-            <option value="2">Об'єкт 2</option>
-            <option value="3">Об'єкт 3</option>
+            <option value="1">Рівне</option>
+            <option value="2">Хмельницький</option>
+            <option value="3">Бровари</option>
         </select>
     
         <label for="pollutant-name">Назва забруднюючої речовини:</label>
