--- a/public/html/1.html
+++ b/public/html/1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Інформація про викиди</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <h1>Інформація про викиди забруднюючих речовин</h1>
@@ -79,6 +79,6 @@
         <tbody id="data-table-body"></tbody>
     </table>
 
-    <script src="script.js"></script>
+    <script src="../../app/script.js"></script>
 </body>
 </html>
