The words which meaning to be as arguments of add-data-form is capitalized

--- a/public/html/1.html
+++ b/public/html/1.html
@@ -54,26 +54,26 @@
         <label for="pollutant-name">Назва забруднюючої речовини:</label>
         <select id="pollutant-name" required>
             <option value="">Оберіть забруднюючу речовину</option>
-            <option value="формальдегід">Формальдегід</option>
-            <option value="кадмій">Кадмій</option>
-            <option value="залізо">Залізо</option>
-            <option value="марганець">Марганець</option>
-            <option value="мідь">Мідь</option>
-            <option value="нікель">Нікель</option>
-            <option value="свинцева">Свинець</option>
-            <option value="хром">Хром</option>
-            <option value="цинк">Цинк</option>
-            <option value="зважені речовини">Зважені речовини (пил)</option>
-            <option value="діоксид сірки">Діоксид сірки</option>
-            <option value="оксид вуглецю">Оксид вуглецю</option>
-            <option value="діоксид азоту">Діоксид азоту</option>
-            <option value="оксид азоту">Оксид азоту</option>
-            <option value="сірководень">Сірководень</option>
-            <option value="фенол">Фенол</option>
-            <option value="фтористий водень">Фтористий водень</option>
-            <option value="хлористий водень">Хлористий водень</option>
-            <option value="аміак">Аміак</option>
-            <option value="завислі речовини">Завислі речовини</option>
+            <option value="Формальдегід">Формальдегід</option>
+            <option value="Кадмій">Кадмій</option>
+            <option value="Залізо">Залізо</option>
+            <option value="Марганець">Марганець</option>
+            <option value="Мідь">Мідь</option>
+            <option value="Нікель">Нікель</option>
+            <option value="Свинець">Свинець</option>
+            <option value="Хром">Хром</option>
+            <option value="Цинк">Цинк</option>
+            <option value="Зважені речовин">Зважені речовини (пил)</option>
+            <option value="Діоксид сірки">Діоксид сірки</option>
+            <option value="Оксид вуглецю">Оксид вуглецю</option>
+            <option value="Діоксид азоту">Діоксид азоту</option>
+            <option value="Оксид азоту">Оксид азоту</option>
+            <option value="Сірководень">Сірководень</option>
+            <option value="Фенол">Фенол</option>
+            <option value="Фтористий водень">Фтористий водень</option>
+            <option value="Хлористий водень">Хлористий водень</option>
+            <option value="Аміак">Аміак</option>
+            <option value="Завислі речовини">Завислі речовини</option>
         </select>
     
         <label for="emission-volume">Об'єм викидів:</label>
