--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Екологічний моніторинг</title>
     <link rel="stylesheet" href="../css/styles.css">
-</head>
-<body>
+  </head>
+  <body>
     <h1>Екологічний моніторинг</h1>
-    
-    <nav>
-        <ul>
-            <li><a href="water-tax.html">Податок за скиди забруднюючих речовин у водні об'єкти</a></li>
-            <li><a href="air-tax.html">Податок за викиди в атмосферне повітря</a></li>
-            <li><a href="add-record.html">Додати новий запис</a></li>
-            <li><a href="data-table.html">Показати таблицю даних</a></li>
-        </ul>
-    </nav>
-
+    <div class="button-container">
+      <div class="toggle-container">
+        <button onclick="toggleSection('water-tax-calc')">Податок за скиди забруднюючих речовин у водні об'єкти</button>
+      </div>
+      <div class="toggle-container">
+        <button onclick="toggleSection('air-tax-calc')">Податок за викиди в атмосферне повітря забруднюючих речовин</button>
+      </div>
+      <div class="toggle-container">
+        <button onclick="location.href='data-table.html'">Показати таблицю даних та додати туди дані</button>
+      </div>
+    </div>
+    <div id="water-tax-calc" class="tab-content" style="display: none;">
+      <form id="water-tax-form" class="tax-form">
+        <label for="water-object-select">Оберіть об'єкт:</label>
+        <select id="water-object-select">
+          <option value="1">Рівне</option>
+          <option value="2">Хмельницьк</option>
+          <option value="3">Бровари</option>
+        </select>
+        <button type="button" onclick="calculateTax('water')">Розрахувати податок</button>
+      </form>
+      <div id="water-tax-result" class="tax-result"></div>
+    </div>
+    <div id="air-tax-calc" class="tab-content" style="display: none;">
+      <form id="air-tax-form" class="tax-form">
+        <label for="air-object-select">Оберіть об'єкт:</label>
+        <select id="air-object-select">
+          <option value="1">Рівне</option>
+          <option value="2">Хмельницьк</option>
+          <option value="3">Бровари</option>
+        </select>
+        <button type="button" onclick="calculateTax('air')">Розрахувати податок</button>
+      </form>
+      <div id="air-tax-result" class="tax-result"></div>
+    </div>
     <script src="../../app/script.js"></script>
-</body>
+  </body>
 </html>
