Finalized module separating

--- a/public/html/data-table.html
+++ b/public/html/data-table.html
@@ -103,6 +103,22 @@
       </thead>
       <tbody id="data-table-body"></tbody>
     </table>
-    <script src="../../app/script.js"></script>
+
+    <script src="../../app/components/table/sortTable.js"></script>
+    <script src="../../app/components/table/searchTable.js"></script>
+    <script src="../../app/components/table/event-listeners/fetch-data.js"></script>
+
+    <script src="../../app/components/taxForm/calculateTax.js"></script>
+    <script src="../../app/components/taxForm/calculateTaxRate.js"></script>
+    <script src="../../app/components/taxForm/getTaxRateByHazardClass.js"></script>
+
+    <script src="../../app/components/table/showNotification.js"></script>
+    <script src="../../app/components/table/event-listeners/pollutant-name.js"></script>
+    <script src="../../app/components/table/event-listeners/add-data-form.js"></script>
+    <script src="../../app/components/table/event-listeners/table-select1.js"></script>
+    <script src="../../app/components/table/updateTableWithNewRecord.js"></script>
+    <script src="../../app/components/table/addEventListeners.js"></script>
+    <script src="../../app/components/taxForm/toggleSection.js"></script>
+    <script src="../../app/components/table/toggleAddRecordForm.js"></script>
   </body>
 </html>
