--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Екологічний моніторинг</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="../../app/components/taxForm/toggleSection.js"></script>
+    <script src="../../app/components/taxForm/calculateTax.js"></script>
+    <script src="../../app/components/taxForm/calculateTaxRate.js"></script>
+    <script src="../../app/components/taxForm/getTaxRateByHazardClass.js"></script>
   </head>
   <body>
     <h1>Екологічний моніторинг</h1>
@@ -43,6 +47,6 @@
       </form>
       <div id="air-tax-result" class="tax-result"></div>
     </div>
-    <script src="../../app/script.js"></script>
+    <script src="../../app/components/table/script.js"></script>
   </body>
 </html>
