--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,6 +9,7 @@
     <script src="../../app/components/taxForm/calculateTax.js"></script>
     <script src="../../app/components/taxForm/calculateTaxRate.js"></script>
     <script src="../../app/components/taxForm/getTaxRateByHazardClass.js"></script>
+    <script src="../../app/components/taxForm/calculateRisk.js"></script>
   </head>
   <body>
     <h1>Екологічний моніторинг</h1>
@@ -21,6 +22,11 @@
       </div>
       <div class="toggle-container">
         <button onclick="location.href='data-table.html'">Показати таблицю даних та додати туди дані</button>
+      </div>
+      <div class="button-container">
+        <div class="toggle-container">
+          <button onclick="toggleSection('air-risk-calc')">Оцінка ризику забруднення повітря</button>
+        </div>
       </div>
     </div>
     <div id="water-tax-calc" class="tab-content" style="display: none;">
@@ -46,6 +52,30 @@
         <button type="button" onclick="calculateTax('air')">Розрахувати податок</button>
       </form>
       <div id="air-tax-result" class="tax-result"></div>
+    </div>
+    <div id="air-risk-calc" class="tab-content" style="display: none;">
+      <form id="air-risk-form" class="tax-form">
+        <label for="air-object-select">Оберіть об'єкт:</label>
+        <select id="air-object-select">
+          <option value="1">Рівне</option>
+          <option value="2">Хмельницьк</option>
+          <option value="3">Бровари</option>
+        </select>
+        <label for="pollutant-name">Назва забруднювачів:</label>
+        <input type="text" id="pollutant-name" required>
+        <label for="concentration">Концентрація:</label>
+        <input type="number" id="concentration" required>
+        <label for="hazard-class">Клас небезпеки:</label>
+        <input type="number" id="hazard-class" required>
+        <label for="critical-organs">Критичні органи:</label>
+        <input type="text" id="critical-organs">
+        <label for="reference-concentration">Референтна концентрація:</label>
+        <input type="number" id="reference-concentration">
+        <label for="cancer-factor">Фактор канцерогенного потенціалу:</label>
+        <input type="number" id="cancer-factor">
+        <button type="button" onclick="calculateRisk()">Розрахувати ризик</button>
+      </form>
+      <div id="air-risk-result" class="tax-result"></div>
     </div>
   </body>
 </html>
