--- a/public/html/data-table.html
+++ b/public/html/data-table.html
@@ -100,7 +100,7 @@
           <label for="critical-organs">Критичні органи/системи:</label>
           <input type="text" id="critical-organs" required>
   
-          <label for="reference-concentration">Референсна концентрація (мг/м³):</label>
+          <label for="reference-concentration">Концентрація (мг/м³):</label>
           <input type="number" id="reference-concentration" required>
   
           <label for="cancer-factor">Фактор канцерогенного потенціалу:</label>
