--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,6 +12,7 @@
     <button onclick="location.href='data-table.html'">ЛР1 - Показати таблицю даних</button>
     <button onclick="location.href='lr2.html'">ЛР2 - Податки за скиди та викиди</button>
     <button onclick="location.href='lr3.html'">ЛР3 - Оцінка ризиків</button>
+    <button onclick="location.href='lr4.html'">ЛР4 - Розрахунок розмірів відшкодування збитків</button>
   </div>
 </body>
 </html>
