--- a/public/html/lr4.html
+++ b/public/html/lr4.html
@@ -52,7 +52,7 @@
                     <td><input type="number" id="year" name="year" step="1"></td>
                     <td id="result">-</td>
                     <td><button type="button" onclick="calculateMi()">Розрахувати</button></td>
-                    <td><button type="button" onclick="saveData()">Зберегти</button></td>
+                    <td><button type="button" onclick="saveData_about_m_atmos()">Зберегти</button></td>
                 </tr>
             </tbody>
         </table>
