--- a/public/html/lr4.html
+++ b/public/html/lr4.html
@@ -25,7 +25,7 @@
     </div>
 
 
-    <form id="emissionForm">
+    <form id="emissionForm" class="hidden">
         <table>
             <thead>
                 <tr>
