--- a/public/html/lr4.html
+++ b/public/html/lr4.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Екологічний моніторинг</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="../../app/components/table/calc-m-atmos.js"></script>
 </head>
 <body>
     <h1>Екологічний моніторинг</h1>
@@ -25,7 +26,7 @@
     </div>
 
 
-    <form id="emissionForm" class="hidden">
+    <form id="calc-m-atmos" class="hidden">
         <table>
             <thead>
                 <tr>
