Lab5 was implemented; all labs were united and tested successfully

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,6 +13,7 @@
     <button onclick="location.href='lr2.html'">ЛР2 - Податки за скиди та викиди</button>
     <button onclick="location.href='lr3.html'">ЛР3 - Оцінка ризиків</button>
     <button onclick="location.href='lr4.html'">ЛР4 - Розрахунок розмірів відшкодування збитків</button>
+    <button onclick="location.href='lr5.html'">ЛР5 - Оцінка шкоди від надзвичайних ситуацій та/або під час воєнного стану</button>
   </div>
 </body>
 </html>
